--- a/app/views/log_in.erb
+++ b/app/views/log_in.erb
@@ -1,5 +1,10 @@
-  <form action="/profile" method="post">
-    <input type="text" placeholder="--email--" name="email">
-    <input type="password" placeholder="--password--" name="password">
-    <input type="submit" value="login">
-  </form>
+<div class="col-md-6" id="log in">
+    <h2>Login</h2>
+        <div class="form-group">
+            <form action="/login" method="POST" name="login" id="login-form">
+                <p><input type="email" name="email" class="form-control" placeholder="Email"></p><br>
+                <p><input type="password" name="password" class="form-control" placeholder="Password"></p><br>
+                <input type="submit" value="Login" class="btn btn-primary pull-right">
+            </form>
+        </div>
+</div>
