sign up and login with session id at route

--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -2,7 +2,7 @@
     <h2>Sign Up</h2>
         <div class="form-group">
             <form action="/signup" method="POST" id="signup-form">
-                <p><input type="text" name="fullname" class="form-control" placeholder="Full name"></p><br>
+                <p><input type="text" name="full_name" class="form-control" placeholder="Full name"></p><br>
                 <p><input type="text" name="username" class="form-control" placeholder="Username"></p><br>
                 <p><input type="text" name="email" class="form-control" placeholder="Email address"></p><br>
                 <p><input type="password" name="password" class="form-control" placeholder="Password"></p><br>
