Added css styling to login/signup

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
 <h1> Hi welcome, either sign up or sign in</h1>
 
+<div class="container" id="signup">
 <%= erb :sign_up %>
 <%= erb :log_in %>
+</div>
