Tweets are now working and saving to profile page.

--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -5,10 +5,15 @@
   <img height="200px" width="200px" src="<%= @current_user.gravatar_link%>">
 
   <form action="/tweet" method="POST" id="">
-  <textarea name="username" class=""></textarea>
+  <textarea name="tweet" class=""></textarea>
   <input type="submit" value="Tweet it!" class="">
   </form>
-
+  <p>Tweets:</p>
+    <% if @tweet %>
+      <% @tweet.each do |item| %>
+        <li> <%= item.tweet %></li>
+      <%end%>
+    <%end%>
 
 
 </div>
