--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -14,6 +14,9 @@
         <li> <%= item.tweet %></li>
       <%end%>
     <%end%>
-
+    <form action="/log_out" method="post">
+    Log out:<br>
+    <input type="submit" value="logout">
+  </form>
 
 </div>
