--- a/app/views/users.erb
+++ b/app/views/users.erb
@@ -3,7 +3,7 @@
   <h2>Users Page</h2>
   <p><% if @users %>
     <% @users.each do |user| %>
-      <li> <%= "#{user.gravatar_link}, #{user.username}" %>
+      <li> <%= "#{user.profile_image}, #{user.username}" %>
             <a href="/users/<%=user.id%>">Go to User Page</a>
       </li>
     <%end%>
