--- a/app/views/users.erb
+++ b/app/views/users.erb
@@ -3,9 +3,15 @@
   <h2>Users Page</h2>
   <p><% if @users %>
     <% @users.each do |user| %>
-      <li> <%= "#{user.profile_image}, #{user.username}" %>
-            <a href="/users/<%=user.id%>">Go to User Page</a>
+      <li> <img src ="<% user.profile_image%>"> <%= user.username %>
+            <a href="/users/<%=user.id%>">Go to User Page</a> -
+            <form action="/follow/<%=user.id%>" method="post">
+            <button id="main_button" type="follow">
+              Follow
+            </button>
+            </form>
       </li>
     <%end%>
-  <%end%></p>
+  <%end%>
+  </p>
 </div>
