--- a/app/views/users.erb
+++ b/app/views/users.erb
@@ -3,7 +3,7 @@
   <h2>Users Page</h2>
   <p><% if @users %>
     <% @users.each do |user| %>
-      <li> <img src ="<% user.profile_image%>"> <%= user.username %>
+      <li> <img height='100px' width='100px' src="<%= user.profile_image%>"> <%= user.username %>
             <a href="/users/<%=user.id%>">Go to User Page</a> -
             <form action="/follow/<%=user.id%>" method="post">
             <button id="main_button" type="follow">
