--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -3,7 +3,7 @@
   <h2><%= @current_user.full_name %></h2>
   <h3><%= @current_user.username %></h3>
   <% if @current_user.profile_image %>
-    <img height="200px" width="200px" src="<%= @current_user.profile_image %>">
+    <img height="200px" src="<%= @current_user.profile_image %>">
   <%end%>
 
   <h4>My Bio:</h4>
