Added terms and conditions

--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -6,7 +6,7 @@
                 <p><input type="text" name="username" class="form-control" placeholder="Username"></p><br>
                 <p><input type="text" name="email" class="form-control" placeholder="Email address"></p><br>
                 <p><input type="password" name="password" class="form-control" placeholder="Password"></p><br>
-                <label><input type="checkbox" name="terms"> I agree with the <a href="#">Terms and Conditions</a>.</label>
+                <label><input type="checkbox" name="terms"> I agree with the <a href="https://youtu.be/ZZ5LpwO-An4">Terms and Conditions</a>.</label>
                 <input type="submit" value="Sign up" class="btn btn-primary pull-right">
             </form>
         </div>
