Added stuff, possibly broke stuff

--- a/app/views/log_in.erb
+++ b/app/views/log_in.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6" id="log in">
+<!-- <div class="col-md-6" id="log in">
     <h2>Login</h2>
         <div class="form-group">
             <form action="/login" method="POST" name="login" id="login-form">
@@ -7,4 +7,19 @@
                 <input type="submit" value="Login" class="btn btn-primary pull-right">
             </form>
         </div>
+</div> -->
+
+<div class="grad"></div>
+        <div class="header">
+            <div>Lil<span>Hihi</span></div>
+        </div>
+        <br>
+        <div class="login">
+            <form action="/login" method="POST" id="signup-form">
+                <input type="text" placeholder="email" name="email">
+                <br>
+                <input type="password" placeholder="password" name="password">
+                <br>
+                <input type="submit" value="login">
+            </form>
 </div>
