--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,4 +1,5 @@
-<div class="col-md-6" id="sign-up">
+<!-- <div class="col-md-6" id="sign-up">
+    <img id='logo' src="http://i.imgur.com/qYntPdJ.png">
     <h2>Sign Up</h2>
         <div class="form-group">
             <form action="/signup" method="POST" id="signup-form">
@@ -10,4 +11,24 @@
                 <input type="submit" value="Sign up" class="btn btn-primary pull-right">
             </form>
         </div>
+</div> -->
+
+<div class="grad"></div>
+        <div class="header">
+            <div>Lil<span>Hihi</span></div>
+        </div>
+        <br>
+        <div class="signup">
+            <form action="/signup" method="POST" id="signup-form">
+                <input type="text" placeholder="fullname" name="full_name">
+                <br>
+                <input type="text" placeholder="username" name="username">
+                <br>
+                <input type="text" placeholder="email" name="email">
+                <br>
+                <input type="password" placeholder="password" name="password">
+                <br>
+                <input type="submit" value="signup">
+            </form>
+        <img id='logo' src="http://i.imgur.com/qYntPdJ.png">
 </div>
