--- a/app/views/tweet_form.erb
+++ b/app/views/tweet_form.erb
@@ -1,4 +1,5 @@
-<form action="/tweet" method="POST" id="">
-  <textarea name="tweet" class=""></textarea>
-  <input type="submit" value="Tweet it!" class="">
+<form action="/tweet" method="POST" class="tweet">
+    <input type="text" placeholder="What's on your mind?" name="tweet">
+    <br>
+    <input type="submit" value="Tweet">
 </form>
